# portfolio

./: .env.example  .gitignore  .prettierignore  404.html  CLAUDE.md  CODE_IMPROVEMENTS.md  CONCURRENCY_BUGS.md  Minallo-e2e-fix.patch  Minallo-exact-quiz-flashcard-count-fix.md  Minallo_ai_training_rag_caching_plan.md  Minallo_appjs_split_walkthrough.md  Minallo_code_improvement_roadmap.md  Minallo_security_hardening_notes.md  README.md  SECURITY.md  deploy.bat  deploy.ps1  eslint.config.mjs  index.html  minallo_admin_dashboard_preview.html  netlify.toml  package-lock.json  package.json  playwright.config.ts  responsive.css  reveal-fix.css  robots.txt  script.js  site.webmanifest  sitemap.xml  studysphere-e2e-fix.patch  studysphere-exact-quiz-flashcard-count-fix.md  studysphere_ai_training_rag_caching_plan.md  studysphere_appjs_split_walkthrough.md  studysphere_code_improvement_roadmap.md  studysphere_security_hardening_notes.md  wrangler.toml
backend/python-ai/: .env.example  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
backend/python-ai/app/: auth.py  config.py  main.py
backend/python-ai/scripts/: README.md  diagnose_cheatsheet_source.py  gen_cheatsheet_dump.py  list_courses.py  list_zero_chunk_docs.py  repro_selection_coverage.py  test_prompt_cache.py
backend/python-ai/tests/: test_answer_intent.py  (+39 more)
python-ai/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
python-ai/app/: auth.py  config.py  jwt_auth.py  main.py  supabase_client.py
python-ai/tests/: test_ask_router.py  test_cache.py  test_chunking.py  test_generate_router.py  test_health.py  test_index_router.py  test_quiz_normalize.py  test_retrieval_scoring.py
(+807 files in other folders)
