[project]
name = "minallo-ai"
version = "0.1.0"
description = "Minallo AI/RAG service — PDF indexing, retrieval, and grounded answer generation."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "python-dotenv>=1.0",
  "supabase>=2.7",
  "openai>=1.40",
  "pdfminer.six>=20240706",
  "tiktoken>=0.7",
  # Phase 12 vision OCR — renders PDF pages to PNG for the vision model.
  # Pure-Python wheel, ships its own PDFium binary, no system Poppler needed.
  "pypdfium2>=4.30",
  # pypdfium2.to_pil() lazy-imports PIL — Pillow must be installed at runtime.
  "Pillow>=10.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
